# sydney.tylerrouze.com

./: .dockerignore  .env.secrets.example  .env.variables.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  setup.sh
.claude/skills/: registry-scrape.md
.github/workflows/: ci.yml  deploy.yml
migrations/: 001_initial.sql  002_reference_data.sql  003_event_invitations.sql
seeds/: dev_party.sql
src/: db.rs  error.rs  listmonk.rs  main.rs  models.rs  registry.rs
src/handlers/: admin.rs  details.rs  home.rs  mod.rs  qr.rs  registry.rs  rsvp.rs  story.rs
static/favicon/: manifest.webmanifest
templates/: admin.html  admin_analytics.html  admin_edit_party.html  admin_events.html  admin_import.html  admin_login.html  admin_meals.html  admin_qr.html  admin_settings.html  base.html  details.html  home.html  registry.html  rsvp.html  rsvp_gate.html  story.html
